fix: Prevent navbar elements from overlapping hero content

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -78,14 +78,13 @@ section {
 
 /* Navbar Container */
 .navbar-container {
-  z-index: 1000;
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  min-height: 100px;
+	z-index: 1000;
+	display: flex;
+	flex-direction: column;
+	position: fixed;
+	justify-content: center;
+	align-items: center;
+	width: 100vw;
 }
 
 /* Navbar Wrapper */
@@ -155,6 +154,15 @@ section {
 }
 
 /* Navbar Logo */
+.navbar-logo-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	top: 70px;
+	pointer-events: none;
+}
+
 .navbar-logo {
   position: relative;
   height: 100px;
